Add printing of product name and selected size and sending mails

--- a/Playground.ipynb
+++ b/Playground.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde64eab",
+   "id": "e1a4a607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dcb5add",
+   "id": "4f8101a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up headless Chrome\n",
     "options = Options()\n",
-    "options.add_argument(\"--headless=new\")  # Use \"--headless\" for older Chrome\n",
+    "#options.add_argument(\"--headless=new\")  # Use \"--headless\" for older Chrome\n",
     "options.add_argument(\"--disable-gpu\")\n",
     "options.add_argument(\"--no-sandbox\")"
    ]
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4192cadd",
+   "id": "f04e8114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc5237c9",
+   "id": "a461f952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +74,8 @@
     "\n",
     "    return \"N/A\", False\n",
     "\n",
+    "sizes_dict = {}  # Dictionary to store size -> availability\n",
+    "\n",
     "try:\n",
     "    driver.get(url)\n",
     "\n",
@@ -82,18 +84,93 @@
     "        EC.presence_of_element_located((By.CSS_SELECTOR, 'div.size-chip-wrapper'))\n",
     "    )\n",
     "\n",
+    "    # List all sizes\n",
     "    # Get the number of size wrappers (do this only once!)\n",
     "    total = len(driver.find_elements(By.CSS_SELECTOR, 'div.size-chip-wrapper'))\n",
     "\n",
     "    for i in range(total):\n",
     "        size_label, available = get_size_info_with_retry(driver, i)\n",
-    "        print(f\"Size: {size_label} | Available: {available}\")\n",
+    "        sizes_dict[size_label] = available  # Store in dictionary\n",
+    "    \n",
     "\n",
+    "    # Print the results\n",
+    "    for size, available in sizes_dict.items():\n",
+    "        print(f\"Size: {size} | Available: {available}\")\n",
+    "        \n",
+    "    # 🔍 Find the selected size\n",
+    "    selected_wrapper = driver.find_element(By.CSS_SELECTOR, 'div.size-chip-wrapper.size-chip-selected')\n",
+    "    selected_label = selected_wrapper.find_element(By.CSS_SELECTOR, '[data-testid=\"ITOTypography\"]')\n",
+    "    selected_size = driver.execute_script(\"return arguments[0].textContent;\", selected_label).strip()\n",
     "\n",
+    "    print(f\"\\n✅ Selected Size: {selected_size}\")\n",
+    "\n",
+    "    # Find product name\n",
+    "    # Wait for the <h1> element to be present\n",
+    "    product_name = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.CSS_SELECTOR, \"main > div > div > h1\"))\n",
+    "    )\n",
+    "\n",
+    "    # Extract and print the text\n",
+    "    product_name = product_name.text.strip()\n",
+    "    print(f\"\\n Product name: {product_name}\")\n",
     "finally:\n",
     "    driver.quit()\n",
     "    print(\"done\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "907c330a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: next step: add mail notification system\n",
+    "\n",
+    "# send mail with template\n",
+    "\n",
+    "\"\"\"\n",
+    "Important notes:\n",
+    "\n",
+    "You need to use an \"App Password\" instead of your regular Gmail password. \n",
+    "Create an app password here: https://myaccount.google.com/apppasswords\n",
+    "This requires enabling 2-Step Verification in your Google Account settings.\n",
+    "\"\"\"\n",
+    "import smtplib\n",
+    "from email.mime.text import MIMEText\n",
+    "from email.header import Header\n",
+    "\n",
+    "# replace all values\n",
+    "sender_email = \"\" \n",
+    "sender_app_password = \"\"\n",
+    "subject = f\"Uniqlo: {product_name} available!\"\n",
+    "\n",
+    "# fill in the text that should be sent to the therapists\n",
+    "body = f\"\"\"\n",
+    "Your item became available! {url}\n",
+    "\"\"\"\n",
+    "\n",
+    "def send_mail(url, recipient_email):\n",
+    "    with smtplib.SMTP_SSL('smtp.gmail.com', 465) as server:\n",
+    "        server.login(sender_email, sender_app_password)\n",
+    "        message = MIMEText(body, _charset=\"utf-8\")\n",
+    "        message['Subject'] = Header(subject, 'utf-8')\n",
+    "        message['From'] = sender_email\n",
+    "        message['To'] = recipient_email\n",
+    "        print(message)\n",
+    "        server.sendmail(sender_email, recipient_email, message.as_string())\n",
+    "\n",
+    "        \n",
+    "send_mail(url, sender_email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9ca8b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
